--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 *
 {
 	margin: 0 ;
-	padding: 0 ;
+  padding: 0 ;
+  font-family: 'Roboto', sans-serif;
 }
 body {
   margin: 0;
@@ -20,7 +21,68 @@ html , body
 	background-color: Gainsboro;
 }
 
+
+
 .main
 {
 	height: 100vh;
 }
+
+.pagination
+{
+
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-grow:  1;
+  
+}
+
+.pagination *
+{
+  text-decoration: none;
+  color:  black;
+  cursor: pointer;
+}
+
+.pagination li
+{
+  background-color: #f44336;
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center; 
+  margin: 0px  0.5%  0px  0.5%;
+
+}
+
+li.active
+{
+  background-color: white;
+  border: 1px solid whitesmoke;
+}
+
+li.active a
+{
+  color: black;
+
+}
+
+.pagination li:hover
+{
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  transform: scale(1.2);
+  transition: .5s;
+}
+
+.pagination li *
+{
+  color: white;
+}
+
